# pyscf

./: pyproject.toml  setup.py
.github/workflows/: build-skbuildcore.yml  ci.yml  run_ci_mkl.sh
.github/workflows/ci_linux_mkl/: build_pyscf.sh  python_deps.sh
conda/: build.sh  meta.yaml
conda-microarch/: build.sh  conda_build_config.yaml  meta.yaml
docker/pypa-env/: build-wheels.sh
pyscf/ao2mo/: nrr_outcore.py  outcore.py  r_outcore.py
pyscf/df/: incore.py  outcore.py
pyscf/df/test/: test_incore.py
pyscf/gto/: mole.py  moleintor.py  ppnl_velgauge.py
pyscf/gto/test/: test_ft_ao_slow.py  test_mole.py
pyscf/gw/: gw_ac.py  helpers.py  ugw_ac.py
pyscf/gw/test/: test_helpers.py
pyscf/lib/: CMakeLists.txt  config.h.in  misc.py  native_build.sh  numpy_helper.py
pyscf/lib/agf2/: CMakeLists.txt  ragf2.c  uagf2.c
pyscf/lib/ao2mo/: CMakeLists.txt  nr_ao2mo.c  nr_incore.c  nrr_ao2mo.c  r_ao2mo.c  restore_eri.c
pyscf/lib/cc/: CMakeLists.txt  ccsd_grad.c  ccsd_pack.c  ccsd_t.c  uccsd_t.c
pyscf/lib/ccsdt/: CMakeLists.txt
pyscf/lib/cmake/: fixrpath.cmake  jobserver.cmake  libxc.cmake  mkl.cmake  openmp.cmake  optflags.cmake  pyscfConfig.cmake.in  xcfun.cmake
pyscf/lib/cmake_user_inc_examples/: cmake.user.inc-gnu
pyscf/lib/dft/: CMakeLists.txt  grid_basis.c  grid_collocate.c  grid_common.c  grid_integrate.c  libxc_itrf.c  multigrid.c  nr_numint.c  nr_numint_sparse.c  numint_uniform_grid.c  r_numint.c
pyscf/lib/gto/: CMakeLists.txt  fill_grids_int2c.c  fill_int2c.c  fill_int2e.c  fill_nr_3c.c  fill_r_3c.c  fill_r_4c.c  ft_ao.c  ft_ao.h  ft_ao_ppnl.c  grid_ao_drv.c  nr_ecp.c  nr_ecp_deriv.c
pyscf/lib/gto/auto_ftao/: ft_ao_ppnl_auto.c  gen-code-ft.cl
pyscf/lib/gw/: CMakeLists.txt  rgw.c
pyscf/lib/mcscf/: CMakeLists.txt  fci_4pdm.c  fci_contract.c  fci_contract_nosym.c  fci_rdm.c  nevpt_contract.c  select_ci.c
pyscf/lib/mp/: CMakeLists.txt
pyscf/lib/np_helper/: CMakeLists.txt  condense.c  mixed.c  np_helper.c  np_helper.h  npdot.c  omatcopy.c  omp_reduce.c  pack_tril.c  transpose.c
pyscf/lib/pbc/: CMakeLists.txt  cell.c  fft.c  fft.h  fill_ints.c  fill_ints_screened.c  fill_ints_sr.c  ft_ao.c  grid_ao.c  hf_grad.c  inner_dot.c  mklfft.c  neighbor_list.c  nr_direct.c  optimizer.c  pp.c  transform_mo.c
pyscf/lib/pdft/: CMakeLists.txt
pyscf/lib/ri/: CMakeLists.txt  r_df_incore.c
pyscf/lib/solvent/: CMakeLists.txt
pyscf/lib/test/: test_numpy_helper.py
pyscf/lib/vhf/: CMakeLists.txt  fill_nr_s8.c  hessian_screen.c  nr_direct.c  nr_direct.h  nr_direct_dot.c  nr_incore.c  nr_sgx_direct.c  nr_sr_vhf.c  optimizer.c  r_direct_o1.c  rkb_screen.c
pyscf/pbc/df/: mpi_df.py  mpi_df_jk.py  mpi_rsdf_builder.py  rsdf_builder.py
pyscf/pbc/dft/: mpi_numint.py
pyscf/pbc/gto/: cell.py
pyscf/pbc/gto/pseudo/: ppnl_velgauge.py
pyscf/pbc/gto/pseudo/test/: test_pp_velgauge.py
pyscf/pbc/gto/test/: test_cell.py
pyscf/pbc/mpitools/: mpi_helper.py
pyscf/pbc/tdscf/: krhf.py
pyscf/scf/test/: test_addons.py
pyscf/tdscf/: rhf.py
